--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChatRoomActivity"></activity>
-        <activity android:name=".ChatRoomActivitylab5"></activity>
+        <activity android:name=".TestToolbar"></activity>
+        <activity android:name=".ChatRoomActivity" />
+        <activity android:name=".ChatRoomActivitylab5" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
