--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
 
     <application
         android:allowBackup="true"
@@ -13,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TestToolbar"></activity>
+        <activity android:name=".WeatherForecast"/>
+        <activity android:name=".TestToolbar"/>
         <activity android:name=".ChatRoomActivity" />
         <activity android:name=".ChatRoomActivitylab5" />
         <activity android:name=".ProfileActivity" />
